# bindmidi

./: .gitignore  Cargo.toml  LICENCE  LICENSE-MIT  README.md  config.default.json  config.default.yml  config.example.json
.github/workflows/: build.yml  rust-debug.yml  rust-release.yml  rust.yml
src/: bind.rs  build.rs  config.rs  main.rs  note.rs  state.rs  statechannel.rs  test.rs  utils.rs
src/common/: config.rs  mod.rs  note.rs
src/state/: interface.rs  manager.rs  midi.rs  mod.rs  table_data_adaptor.rs
