[package]
name = "midi2key"
version = "0.5.0"
authors = ["Seercat3160"]
description = "Bind MIDI notes to keyboard keys and mouse movement"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.70"
libui = { git = "https://github.com/Seercat3160/libui", rev = "564b641f378515bf791be9726d3df6b6e250c850" }
musical_scales = "0.2.0"
oneshot = "0.1.5"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
