[package]
name = "midi2key"
version = "0.5.0"
authors = ["Seercat3160"]
description = "Bind MIDI notes to keyboard keys and mouse movement"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.70"
libui = { git = "https://github.com/libui-rs/libui", rev = "2341698d253b844499695c335ca909d89b04966c" }
musical_scales = "0.2.0"
oneshot = "0.1.5"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
