[package]
name = "midi2key"
version = "0.5.0"
authors = ["Seercat3160"]
description = "Bind MIDI notes to keyboard keys and mouse movement"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.70"
directories = "5.0"
enigo = "0.1.2"
libui = "0.3.0"
midir = "0.9.1"
midly = "0.5.3"
musical_scales = "0.2.0"
oneshot = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
